--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=${SPRING_APP_NAME:EazyBankApplication}
-spring.security.user.name=${SECURITY_USERNAME:monitranjan}
-spring.security.user.password=${SECURITY_PASSWORD:12345}
+#spring.security.user.name=${SECURITY_USERNAME:monitranjan}
+#spring.security.user.password=${SECURITY_PASSWORD:12345}
 logging.level.org.springframework.security=${SPRING_SECURITY_LOG_LEVEL:TRACE}
 logging.pattern.console=${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
 #time in green log level in blue threadName in red message in yellowColour
