--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,6 @@ logging.level.org.springframework.security=${SPRING_SECURITY_LOG_LEVEL:TRACE}
 logging.pattern.console=${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
 #time in green log level in blue threadName in red message in yellowColour
 #if it gets environment variable with matching name that will be considered else the name provided
-
 spring.datasource.url=jdbc:mysql://${DATABASE_HOST:localhost}:${DATABASE_PORT:3306}/${DATABASE_NAME:eazybank}
 spring.datasource.username=${DATABASE_USERNAME:root}
 spring.datasource.password=${DATABASE_PASSWORD:root}
@@ -16,4 +15,6 @@ spring.jpa.properties.hibernate.format_sql=${HIBERNATE_FORMAT_SQL:true}
 #password of user connected
 #show sql in the logs from jpa framework
 #sql query is not readable hence formatted to get the details in prod env we should make it false as lots of it will be printed
-
+spring.config.import=application_prod.properties
+spring.profiles.active=default
+#To let us know that there are other properties and profiles too
