Implemented Session Management in application for users

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,4 @@ spring.jpa.properties.hibernate.format_sql=${HIBERNATE_FORMAT_SQL:true}
 spring.config.import=application_prod.properties
 spring.profiles.active=default
 #To let us know that there are other properties and profiles too
+server.servlet.session.timeout=${SESSION_TIMEOUT:20m}
