EventListner added for the login success/failure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,6 @@ spring.jpa.properties.hibernate.format_sql=${HIBERNATE_FORMAT_SQL:true}
 #show sql in the logs from jpa framework
 #sql query is not readable hence formatted to get the details in prod env we should make it false as lots of it will be printed
 spring.config.import=application_prod.properties
-spring.profiles.active=default
+spring.profiles.active=prod
 #To let us know that there are other properties and profiles too
 server.servlet.session.timeout=${SESSION_TIMEOUT:20m}
