--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.config.import=application_prod.properties
 spring.profiles.active=default
 #To let us know that there are other properties and profiles too
 server.servlet.session.timeout=${SESSION_TIMEOUT:20m}
+
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${JWK_SET_URI:http://localhost:8081/realms/eazybankdev/protocol/openid-connect/certs}
