--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,8 +20,8 @@ spring.profiles.active=default
 #To let us know that there are other properties and profiles too
 server.servlet.session.timeout=${SESSION_TIMEOUT:20m}
 
-#spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${JWK_SET_URI:http://localhost:8081/realms/eazybankdev/protocol/openid-connect/certs}
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${JWK_SET_URI:http://localhost:8081/realms/eazybankdev/protocol/openid-connect/certs}
 
-spring.security.oauth2.resourceserver.opaque.introspection-uri= ${INTROSPECT_URI:http://localhost:8081/realms/eazybankdev/protocol/openid-connect/token/introspect}
-spring.security.oauth2.resourceserver.opaque.introspection-client-id=${INTROSPECT_ID:eazybankintrospect}
-spring.security.oauth2.resourceserver.opaque.introspection-client-secret=${INTROSPECT_SECRET:RCzANCPbvVtcqfxqwGkcqgV9olLnFlkQ}
+#spring.security.oauth2.resourceserver.opaque.introspection-uri= ${INTROSPECT_URI:http://localhost:8081/realms/eazybankdev/protocol/openid-connect/token/introspect}
+#spring.security.oauth2.resourceserver.opaque.introspection-client-id=${INTROSPECT_ID:eazybankintrospect}
+#spring.security.oauth2.resourceserver.opaque.introspection-client-secret=${INTROSPECT_SECRET:RCzANCPbvVtcqfxqwGkcqgV9olLnFlkQ}
